--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                 <h2 style="font-family: poppins;
                 font-size: 40px;">Welcome to Arcos Archery Academy</h2>
                 <p class="heading"style="font-family: poppins;font-size: 12px;color: #e69158;">Join us to master the art of archery with professional training and state-of-the-art facilities.</p>
-                <a href="#about" >
-                    <button class="submitt"><span>Learn More</span></button>
-                </a>
+                
             </div>
         </section>
         </div>
@@ -114,7 +112,7 @@
                 Coach: Mr Sreevas
                 <p style="padding-left: 14px;font-size: 15px;color: aliceblue;">
                     <span style="font-family: poppins;font-size: 14px;font-weight: 400;">
-                        Previously coached  keralapolice archery academy, universty college, samskrthacollege palyam, Amrhss kattela
+                        Previously coached in Kerala Police Archery Academy, Universty College, Samskritha College Palyam, ammr hss kattela.
                     </span>
                 </p>
                </div>
