--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                <p></p>
                <div  style="padding-left: 14px;font-size: 15px;color: aliceblue;
                font-weight: bold;border-style: solid;padding: 10px 10px 10px 10px;border-color: #e57022;">
-                Coach: Mr Sreevas
+                Coach: Sreevas R.S & Anjumol Joseph
                 <p style="padding-left: 14px;font-size: 15px;color: aliceblue;">
                     <span style="font-family: poppins;font-size: 14px;font-weight: 400;">
-                        Previously coached in Kerala Police Archery Academy, Universty College, Samskritha College Palyam, ammr hss kattela.
+                        Previously coached in Kerala Police Archery Academy, Universty College, Sanskrit College Palyam, amrhss kattela.
                     </span>
                 </p>
                </div>
